src/index.css
@import "tailwindcss";
@layer utilities;

html, body, #root {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* Estiliza toda a barra */
::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

/* O fundo da barra */
::-webkit-scrollbar-track {
  background: transparent; 
}

/* O "pegador" (thumb) da barra */
::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.2); /* Tom translúcido */
  border-radius: 10px;
}

/* O pegador quando o mouse passa por cima */
::-webkit-scrollbar-thumb:hover {
  background: rgba(255, 255, 255, 0.4); 
}

